<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp">

    <com.hihonor.healthkitdemo.view.CardRoundView
        android:id="@+id/card_step_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_realtime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="今日消耗热量"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_realtime_title"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_one_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport_running"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_one_result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/layout_one"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_two_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport_walk"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_two_result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/layout_two"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_three_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport_riding"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_three_result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/layout_three"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_four_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport_training"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_four_result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_below="@+id/layout_four"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_five_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sport_other"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_five_result_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textSize="16sp" />
        </LinearLayout>
    </com.hihonor.healthkitdemo.view.CardRoundView>
    <com.hihonor.healthkitdemo.view.CardRoundView
        android:id="@+id/cart_step_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/card_step_daily">
        <TextView
            android:id="@+id/tv_step_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="每分钟消耗热量"
            android:textSize="16sp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/every_minute_date_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_step_title"
            android:layout_marginTop="10dp" />
    </com.hihonor.healthkitdemo.view.CardRoundView>
    <TextView
        android:id="@+id/tv_error_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/none_data"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>