<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hihonor.healthkitdemo.view.CardRoundView
        android:id="@+id/ll_heart_rate_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heart_rate_and_step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_time_heart_rate_title"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_heart_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_dynamic_heart_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="@dimen/text_size_50"></TextView>

                    <TextView
                        android:id="@+id/tv_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/real_time_heart_rate_unit"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"
                    android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_step"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="@dimen/text_size_50"></TextView>

                        <TextView
                            android:id="@+id/tv_step_unit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/real_time_step_unit"></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.hihonor.healthkitdemo.view.CardRoundView>
</androidx.constraintlayout.widget.ConstraintLayout>